<resources>
    <string name="app_name">BengkelGo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have a account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">No Hp.</string>
    <string name="address">Address</string>
    <string name="old_password">Insert Old Password</string>
    <string name="new_password">Insert New Password</string>
    <string name="save">Save</string>
    <string name="login_page">Login Page</string>
    <string name="continue_button">Continue</string>
    <string name="terms_and_conditions">By signing up, you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="congratulations">Congratulations!</string>
    <string name="password_reset_success">Your password has been successfully reset. You can now log in with your new password!</string>
    <string name="register_success">You have successfully created an account, now log in with the account you have.</string>
    <string name="login_now">Login Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="app_tagline">Servis Kendaraan On-Demand, Teknisi Datang ke Lokasi Anda.</string>
    <string name="emergency_call_dialog_title">Panggilan Darurat</string>
    <string name="emergency_call_dialog_description">Fitur ini akan menghubungkan Anda dengan teknisi kami untuk bantuan darurat seperti ban bocor atau kendaraan mogok. Pastikan Anda berada di lokasi yang aman.</string>
    <string name="emergency_call_dummy_number_label">Nomor Darurat BengkelGo:</string>
    <string name="emergency_call_dummy_number">0812-0000-0000</string> <string name="emergency_call_action_call">Hubungi Sekarang</string>
    <string name="dialog_cancel">Batal</string>
    <string name="emergency_call_toast_message">Emergency Call dipilih</string>
    <string name="no_phone_app_found">Tidak ada aplikasi telepon yang ditemukan.</string>
    <string name="title_vehicle_repair">Vehicle Repair</string>
    <string name="vehicle_type_prompt">Pilih Jenis Kendaraan</string>
    <string name="service_type_prompt">Pilih Jenis Servis</string>
    <string name="location_prompt">Pilih Lokasi Area</string>
    <string name="payment_method_prompt">Pilih Metode Pembayaran</string>
    <string name="hint_service_schedule">Pilih Jadwal Servis</string>
    <string name="next">Next</string>
    <string name="order_summary">Order Summary</string>
    <string name="label_vehicle_type">Vehicle Type: %s</string>
    <string name="label_service_type">Service Type: %s</string>
    <string name="label_location_area">Location Area: %s</string>
    <string name="label_service_schedule">Service Schedule: %s</string>
    <string name="label_payment_method">Payment Method: %s</string>
    <string name="hint_complete_address">Input alamat lengkap Anda di sini...</string>
    <string name="order_now">Order Now</string>
    <string name="order_received_title">Order Received!</string>
    <string name="order_received_message">Your service order has been received. We will process it shortly. Thank you for choosing our service!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="please_fill_all_fields">Harap isi semua kolom.</string>
    <string name="please_select_schedule">Harap pilih jadwal servis.</string>
    <string name="order_submission_error">Gagal mengirim pesanan. Coba lagi.</string>
    <string name="order_submitted_successfully">Pesanan berhasil dikirim!</string>
    <string name="input_complete_address_hint">Input Alamat Lengkap</string>
    <string name="select_date">Pilih Tanggal</string>
    <string name="select_time">Pilih Waktu</string>

    <string-array name="vehicle_types">
        <item>Mobil</item>
        <item>Motor</item>
    </string-array>
    <string-array name="service_types_car">
        <item>Ganti Oli</item>
        <item>Tune-Up Mesin</item>
        <item>Cek Aki</item>
        <item>Rotasi Ban</item>
        <item>Servis Rem</item>
    </string-array>
    <string-array name="service_types_motorcycle">
        <item>Ganti Oli</item>
        <item>Servis CVT</item>
        <item>Cek Aki</item>
        <item>Tambal Ban</item>
        <item>Servis Rantai</item>
    </string-array>
    <string-array name="locations">
        <item>Banda Aceh</item>
        <item>Aceh Besar</item>
    </string-array>
    <string-array name="payment_methods">
        <item>Cash (Bayar di Tempat)</item>
        <item>Transfer Bank (Konfirmasi Manual)</item>
    </string-array>
</resources>